切换回 G1GC